sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:6: error: ')' expected but 'if' found.
    if(position==0){position+=1}
    ^